name:                cve
version:             0.1.0.0
synopsis:            simple and efficient cve datatype
-- description:         
homepage:            github.com/chessai/cve.git
license:             BSD3
license-file:        LICENSE
author:              chessai
maintainer:          chessai1996@gmail.com
copyright:           2018 chessai 
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Cve 
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5.0
                     , aeson
                     , text
  default-language:    Haskell2010
